--- a/AccountService/k8s-dev.properties
+++ b/AccountService/k8s-dev.properties
@@ -21,3 +21,4 @@ fabric8.apply.namespace=default
 fabric8.replicationController.name=bw-account
 fabric8.env.JAEGER_AGENT_PORT=6831
 fabric8.env.BW_PROFILE=Docker
+fabric8.env.CONSUL_SERVER_URL=http\://18.207.205.140:8500
