--- a/AccountService/docker-dev.properties
+++ b/AccountService/docker-dev.properties
@@ -1,7 +1,7 @@
 #Docker host properties
 #Mon Oct 01 14:03:09 PDT 2018
 bwdocker.certPath=</home/user/machine/>
-docker.image=267317892887.dkr.ecr.us-east-1.amazonaws.com/tibco/banqio-sample\:accountservice
+docker.image=082336523630.dkr.ecr.us-east-1.amazonaws.com/banqio-sample\:accountservice
 bwdocker.host=unix\:///var/run/docker.sock
 bwdocker.maintainer=crmadrig@tibco.com
 bwdocker.containername=
